STYLE Fixes bigger logo hide error logo image and align to the left

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -162,5 +162,9 @@ footer {
     .token-error-content {
       font-size: 0.81em;
     }
+    .title {
+      text-align: left;
+      margin-left: 20px;
+    }
   }
 }
